--- a/.gitignore
+++ b/.gitignore
@@ -160,4 +160,12 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
+
 #.idea/
+# Specific versions of the app
+app_v2.py
+app_v3.py
+app_v4.py
+app_v5.py
+app_v6.py
+app_v7.py
